refactor: add ai page, optimize site, add site deploy (#28)
* refactor(site): remove algolia

* refactor: adjust exports

* refactor(site): adjust site

* docs(site): add ai page

* docs(site): fix resource loader

* docs(site): optimize site

* chore: add readme

* docs(site): update home page

* docs(site): add docs

* docs: optimize site

* chore: update site deploy

* refactor(site): optimize site page

* chore: update script

* chore: update readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/infographic",
-  "version": "0.0.1-beta.7",
+  "version": "0.0.1-beta.8",
   "description": "AntV Infographic generator and visualization library",
   "keywords": [
     "antv",
@@ -38,9 +38,10 @@
     "src"
   ],
   "scripts": {
-    "build": "run-s clean build:esm build:cjs build:umd size",
+    "build": "run-s clean build:esm build:cjs build:umd build:site size",
     "build:cjs": "tsc --module commonjs --outDir lib",
     "build:esm": "tsc --module ESNext --outDir esm",
+    "build:site": "npm --prefix site run build:static",
     "build:umd": "vite build",
     "build:watch": "tsc -p tsconfig.json --watch",
     "check:test": "tsc --noEmit -p __tests__",
@@ -48,10 +49,10 @@
     "clean": "rimraf esm lib dist tsconfig.tsbuildinfo",
     "dev": "cd dev && npm run dev",
     "format": "prettier --write . --ignore-path ./.gitignore",
+    "postinstall": "npm --prefix site install",
     "lint": "run-s lint:root lint:site",
     "lint:root": "eslint . --ext .ts,.tsx --ignore-pattern 'site/**' && npm run check:test",
     "lint:site": "npm --prefix site run lint",
-    "postinstall": "npm --prefix site install",
     "size": "size-limit",
     "test": "vitest --run --coverage"
   },
