--- a/site/package.json
+++ b/site/package.json
@@ -9,6 +9,7 @@
     "dev:next": "next dev",
     "dev:watch-content": "node scripts/watch-content.js",
     "build": "next build",
+    "build:static": "next build",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format:source": "prettier --config .prettierrc --write \"{plugins,src}/**/*.{js,ts,jsx,tsx,css}\"",
@@ -28,10 +29,10 @@
     "@codemirror/commands": "^6.8.0",
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-html": "^6.4.11",
-    "@docsearch/css": "^3.8.3",
-    "@docsearch/react": "^3.8.3",
-    "@headlessui/react": "^1.7.0",
     "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "body-scroll-lock": "^3.1.3",
     "classnames": "^2.2.6",
     "debounce": "^1.2.1",
