chore: update workflow (#33)
* chore: update workflow

* chore: update deploy time

* fix: ci and deploy issue

--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - main
       - dev
-  pull_request:
-    branches:
-      - main
-      - dev
   workflow_dispatch:
 
 permissions:
@@ -35,29 +31,21 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package.json'
 
-      - name: Install dependencies (workspace)
+      - name: Install root dependencies
         run: npm install
 
       - name: Build
         run: npm run build
 
-      - name: Pack library for site
-        id: pack
-        run: |
-          TARBALL=$(npm pack)
-          echo "tarball=$TARBALL" >> $GITHUB_OUTPUT
-          echo "tarball_path=$PWD/$TARBALL" >> $GITHUB_OUTPUT
-
-      - name: Link local library into site
-        run: |
-          TARBALL_PATH="${{ steps.pack.outputs.tarball_path }}"
-          npm --prefix site install --no-save "$TARBALL_PATH"
+      - name: Install site dependencies
+        run: npm --prefix site install
 
       - name: Build site
         run: npm run build:site
 
       - name: Deploy to GitHub Pages
-        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev')
+        if: github.event_name == 'push' &&
+          (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev')
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
