--- a/package.json
+++ b/package.json
@@ -37,11 +37,8 @@
     "dist",
     "src"
   ],
-  "workspaces": [
-    "site"
-  ],
   "scripts": {
-    "build": "run-s clean build:esm build:cjs build:umd build:site size",
+    "build": "run-s clean build:esm build:cjs build:umd size",
     "build:cjs": "tsc --module commonjs --outDir lib",
     "build:esm": "tsc --module ESNext --outDir esm",
     "build:site": "npm --prefix site run build:static",
