--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,12 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Build
+        run: npm run build
+
+      - name: Install site dependencies
+        run: npm --prefix site install
+
       - name: Run CI
         run: |
           npm run ci
