feat(ssr):  Implement SSR rendering pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,20 @@ dist
 esm
 lib
 tsconfig.tsbuildinfo
-
+tsconfig.*.tsbuildinfo
 pnpm-lock.yaml
 package-lock.json
 coverage
-
+.DS_Store
 .claude
 .docusaurus
 build
 .codex/skills
 .claude/skills
+
+# CLI package build artifacts
+cli/node_modules
+cli/esm
+cli/lib
+cli/coverage
+cli/tsconfig.tsbuildinfo
