--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
   "exports": {
     ".": {
       "types": "./esm/index.d.ts",
-      "import": "./esm/index.js",
-      "require": "./lib/index.js"
+      "require": "./lib/index.js",
+      "import": "./esm/index.js"
     },
     "./jsx-runtime": {
       "types": "./esm/jsx-runtime.d.ts",
-      "import": "./esm/jsx-runtime.js",
-      "require": "./lib/jsx-runtime.js"
+      "require": "./lib/jsx-runtime.js",
+      "import": "./esm/jsx-runtime.js"
     },
     "./jsx-dev-runtime": {
       "types": "./esm/jsx-dev-runtime.d.ts",
-      "import": "./esm/jsx-dev-runtime.js",
-      "require": "./lib/jsx-dev-runtime.js"
+      "require": "./lib/jsx-dev-runtime.js",
+      "import": "./esm/jsx-dev-runtime.js"
+    },
+    "./ssr": {
+      "types": "./lib/ssr/index.d.ts",
+      "require": "./lib/ssr/index.js",
+      "import": "./esm/ssr/index.js"
     }
   },
   "main": "./lib/index.js",
@@ -41,7 +46,7 @@
   "scripts": {
     "build": "run-s clean build:esm build:cjs build:umd size",
     "build:cjs": "tsc --module commonjs --outDir lib",
-    "build:esm": "tsc --module ESNext --outDir esm",
+    "build:esm": "tsc --module ESNext --outDir esm && node scripts/fix-esm-imports.mjs",
     "build:site": "npm --prefix site run build:static",
     "build:umd": "vite build",
     "build:watch": "tsc -p tsconfig.json --watch",
@@ -109,6 +114,7 @@
     "@types/css": "^0.0.38",
     "@types/culori": "^4.0.1",
     "@types/d3": "^7.4.3",
+    "@types/jsdom": "^21.1.7",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.3.1",
     "@types/tinycolor2": "^1.4.6",
