--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,10 @@ jobs:
         run: |
           npm run build
           npm run build:site
+      - name: 📦 Build CLI
+        run: |
+          npm --prefix cli install 
+          npm --prefix cli run build
 
       - name: ✅ Run continuous integration tests
         run: npm run ci
